Use link for JDK API javadoc directly since current version (3.0.1) of javadoc plugin does not support automatic detection for java 11. In the same time we can't upgrade to latest 3.1.0 because of https://issues.apache.org/jira/projects/MJAVADOC-596 https://issues.apache.org/jira/projects/MJAVADOC-599
+ post rebase adaptations.